fix(): suppression double scroll

--- a/src/components/themes/dashboard/Theme.css
+++ b/src/components/themes/dashboard/Theme.css
@@ -31,9 +31,10 @@ header {
 
 .articleWrapper {
   grid-column: 1 / span 4;
-  display: grid;
+  /* display: grid;
   grid-template-columns: 10vw 1fr 10vw;
-  grid-template-rows: 4vh 1fr;
+  grid-template-rows: 4vh 1fr; */
+  overflow-x: hidden;
 }
 
 .navMenu {
@@ -41,6 +42,8 @@ header {
 }
 
 .navMenu.open {
+  position: absolute;
+  margin-top: 2.2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -67,6 +70,11 @@ article {
   grid-column: 1/3;
   grid-row: 1/3;
   box-shadow: inset 0px 0px 10px -10px rgba(0, 0, 0, 0.5);
+}
+
+.ArticleTitle{
+  font-size: 3rem;
+  color: "#b15c34"
 }
 .cardsWrap {
   display: flex;
@@ -109,18 +117,18 @@ article {
 }
 
 footer {
+  /* height: 3rem;
+  overflow: auto; */
   grid-column: 1 / 3;
-  grid-row: 3;
+  grid-row: 4;
   background-color: #363f5f;
-  height: 4vh;
   bottom: 0;
   color: white;
 }
-footer div {
-  display: grid;
-  grid-template-columns: 10vw 1fr 10vw;
-  height: 100%;
+.footerElements{
+  text-align: center;
 }
+
 .footerContent {
   grid-column: 2/3;
   margin: 0;
@@ -128,13 +136,13 @@ footer div {
   justify-self: center;
 }
 
-@media all and (min-width: 400px) {
+@media all and (min-width: 420px) {
   #main {
     display: grid;
     grid-template-columns: 10em 1fr;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: auto 2em 1fr auto;
     height: 100vh;
-    overflow: hidden;
+    overflow: auto;
   }
   .burgerMenuDash {
     display: none;
@@ -182,10 +190,8 @@ footer div {
     margin: 0 1rem;
   }
 
-  article {
-    grid-column: 2/3;
-    grid-row: 1 / span 3;
-    /* align-self: stretch; */
+  .ArticleTitle{
+    font-size: 5rem;
   }
 
   .usersCards {
@@ -219,4 +225,19 @@ footer div {
     width: 5rem;
     height: 5rem;
   }
+  .dashFooter{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: baseline;
+    padding-bottom: 1rem;
+  }
+  .dashFooter h5{
+    margin: 1rem 0 ;
+  }
+  .footerElements .footLink{
+  color:#6aa1f6  ;
+  font-size: 0.9rem;
+  }
+
 }
